fix(App.css): Change alignment

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-end;
 }
